--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.299",
     "react-router-dom": "^7.6.3",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
-    "react-typing-effect": "^2.0.5",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
