--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^7.6.3",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
+    "tailwind-clip-path": "^1.0.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
